# llm-html-solutions

./: .gitignore  README.md  config.toml  pyproject.toml  results.csv
compare/: __main__.py  criteria.py
scripts/: cp_results
